deploy/overlays/dev/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  namespace: notes
spec:
  template:
    spec:
      containers:
        - name: notes-app
