deploy/overlays/dev/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app
  namespace: notes
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "700m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.org/client-max-body-size: "700m"
spec:
  rules:
    - host: notes.172.17.93.185.nip.io
