deploy/overlays/dev/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app
  namespace: notes
spec:
  rules:
  - host: notes.172.17.93.185.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-app
            port:
              number: 80
